kubernetes/exemplo 5/k8s/app/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-users
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api-users
  template:
    metadata:
      labels:
        app: api-users
    spec:
      containers:
        - name: api
          image: diegocbcastroo/node-db:1.0
          ports:
            - containerPort: 3000
          resources:
            requests:
              cpu: "100m"
            limits:
              cpu: "500m"
