kubernetes/exemplo 5/k8s/app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-users
spec:
  type: NodePort
  selector:
    app: api-users
  ports:
    - port: 3000
      targetPort: 3000
      nodePort: 30000
